[package]
name = "common"
version = "0.1.0"
authors = ["Evgeny Kuzyakov <ek@nearprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
borsh = "0.7.1"
