[package]
name = "fetcher"
version = "0.1.0"
authors = ["Evgeny Kuzyakov <ek@nearprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
base64 = "0.11"
borsh = "0.7.1"
hex = "0.4"
ctrlc = "3.1.7"

[[bin]]
path = "src/main.rs"
name = "fetcher"
